--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@twist/babel-plugin-transform": "git+https://git@github.com/revurirams123/babel-plugin-transform-twist.git",
-    "babel-core": "7.2.0",
+    "babel-core": "^7.0.0",
     "babel-template": "^6.26.0",
     "babel-types": "^6.26.0"
   },
